feat: added new functionalities to roomController and updated the swagger
